# ShoppingAssistantCompliantWithUCP

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  READY_TO_TEST.md  STATUS_REPORT.md  amplify.yml  pyproject.toml  requirements.txt  samconfig.toml.example  setup.py  template.yaml  test_local.sh
frontend/: chat.js  index.html  style.css
src/chatbot/: __init__.py  app.py  config.py  main.py  models.py
src/chatbot/auth/: __init__.py  config.py  dependencies.py  jwt_validator.py  merchant_oauth.py
src/chatbot/conversation/: __init__.py  local_manager.py  manager.py  state.py
src/chatbot/nlu/: __init__.py  openai_client.py  tools.py
src/chatbot/services/: __init__.py  catalog_service.py  checkout_service.py  payment_service.py
src/chatbot/ucp/: __init__.py  client.py  headers.py
src/chatbot/utils/: logger.py
src/chatbot/webhooks/: __init__.py  auth.py
tests/: conftest.py  test_services.py  test_ucp_client.py
tests/e2e/: .env.example  CALLBACK_ARCHITECTURE_CHANGE.md  MERCHANT_AUTH_ISSUE.md  README.md  TEST_STATUS.md  oauth-flow-manual-merchant-login.spec.js  oauth-flow.spec.js  package-lock.json  package.json  playwright.config.js  setup.sh  test-merchant-auth-only.spec.js  verify-no-banner.spec.js
